public class MenuActions { // implements/extends Menu??? menu er ikke abstract
}
