public class Season extends Series {
}
